Edit stream in controller